<resources>

    <!-- App -->
    <string name="app_name">JobHunting</string>

    <!-- Sample / Test -->
    <string name="www">Hello World</string>

    <!-- Company list -->
    <string name="title_activity_companylist">CompanylistActivity</string>

    <!-- Wallet activity -->
    <string name="add_to_google_wallet_button_content_description">
        Add to Google Wallet
    </string>
    <string name="sample_pass" translatable="false">Sample Pass</string>
    <string name="google_wallet_status_unavailable" translatable="false">
        Unfortunately, Google Wallet is not available on this phone.
    </string>
    <string name="add_google_wallet_success" translatable="false">
        The pass was added successfully!
    </string>
    <string name="add_google_wallet_cancelled" translatable="false">
        The user cancelled adding the pass to Google Wallet.
    </string>
    <string name="add_google_wallet_unknown_error" translatable="false">
        An unknown error occurred when adding pass to Google Wallet.
    </string>

    <!-- Memo -->
    <string name="title_create_note">○○会社メモ新規作成</string>
    <string name="label_note_title">メモタイトル</string>
    <string name="label_note_content">メモ内容</string>
    <string name="hint_note_title">タイトルを入力</string>
    <string name="hint_note_content">内容を入力</string>
    <string name="button_create">作成</string>
    <string name="description_back">戻る</string>
    
    <!-- CompanyList -->
    <string name="title_companyList">企業一覧</string>
    <string name="button_Registration">登録</string>
    <string name="button_edit">編集：</string>
    <string name="Selection_status">選考状況:</string>
    <string name="location">所在地：</string>
    <string name="Next_scheduled_date">次回予定日：</string>
    <string name="Company_URL">企業URL：</string>
    <string name="button_corporate_memo">企業メモ</string>
    
    <!-- Companyedit -->
    <string name="title_CompanyEdit">企業編集</string>
    <string name="Company_info">企業情報</string>
    <string name="button_Delete">消去</string>
    <string name="Company_name">企業名：</string>
    <string name="Industry">業種：</string>




</resources>
