<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp">

    <!-- 見出し -->

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="企業登録"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Company_info"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"/>

    <!-- 志望度 & お気に入り -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <!-- 志望度 -->
      <LinearLayout
          android:id="@+id/layoutStars"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:background="#CFEFF3"
          android:gravity="center"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/btn_star_big_off" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/btn_star_big_off" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/btn_star_big_off" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/btn_star_big_off" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/btn_star_big_off" />
      </LinearLayout>

      <!-- お気に入り -->
      <FrameLayout
          android:id="@+id/favoriteArea"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_marginStart="12dp"
          android:background="#2E7D32">

        <ImageView
            android:id="@+id/starFavorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@android:drawable/btn_star_big_off" />
      </FrameLayout>
    </LinearLayout>

    <!-- 企業名 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/Company_name" />

      <EditText
          android:id="@+id/editCompanyName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text" />
    </LinearLayout>

    <!-- 業種 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/Industry" />

      <EditText
          android:id="@+id/editIndustry"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text" />
    </LinearLayout>

    <!-- 所在地 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/location" />

      <EditText
          android:id="@+id/editLocation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text" />
    </LinearLayout>

    <!-- 選考状況 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/Selection_status" />

      <EditText
          android:id="@+id/editStatus"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text" />
    </LinearLayout>

    <!-- 次回予定日 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/Next_scheduled_date" />

      <EditText
          android:id="@+id/editNextDate"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:drawableEnd="@android:drawable/ic_menu_my_calendar"
          android:hint="日付を選択" />
    </LinearLayout>

    <!-- 企業URL -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/Company_URL" />

      <EditText
          android:id="@+id/editUrl"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text" />
    </LinearLayout>

    <!-- 企業メモ -->

    <!-- 下部ボタン -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

      <Space
          android:layout_width="16dp"
          android:layout_height="wrap_content"/>

      <Button
          android:id="@+id/buttonSave"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/button_Registration"
          android:backgroundTint="@android:color/holo_green_dark"/>
    </LinearLayout>

  </LinearLayout>
</ScrollView>
